# cads_data_exchange

./: .envrc  .gitignore  README.md  clean_baserow.py  cleanup_old.py  combine_tnamse.py  config_charite_namse.yaml  constants.py  cron.sh  cron_frequent.sh  export_phenotips.sh  fetch_baserow_schemas.py  fetch_baserow_table.py  fetch_data.sh  fetch_lb_pel.py  generate_batch_email.py  mdb_to_mail.py  pyproject.toml  requirements.txt  run_baserow_backup.sh  run_webgui.sh  settings.toml  update_baserow.sh  upgrade_pip.sh  upload_baserow.py  worker.py
baserow_utils/: __init__.py
data_exchange/: __init__.py  __main__.py  baserow.py  helpers.py  myvariant.py  nameinfo.py  planner_match.py  report.py  sams.py  sodar.py  test_planner_match.py  updates.py  validation.py  varfish.py
sams/: __init__.py
schemas/: Cases.yaml  Findings.yaml  PatientsRelatives.yaml  Personnel.yaml
scripts/: 2023-09_clinvar_cumulative_report_sync.py  clinvar_cumulative_report_sync.py  create_clinvar_this_export.py  retrieve_clinvar.sh  sync_clinvar_results_baserow.py  upload_clinvar.sh
tn_baserow_sync/: clean_baserow.py  fetch_baserow_schemas.py
tn_baserow_sync/schemas/: Cases.yaml  Findings.yaml  PatientsRelatives.yaml  Personnel.yaml
webapp/: __init__.py
webapp/templates/: main.html
webgui/: __init__.py  baserow_api.py  docx_templating.py  rules.py  test_rules.py
webgui/templates/: base.html  index.html  templates.html
webgui/templates/partials/: entry_generate.html  template_update.html
